# AlmanX-SIE

./: Cargo.toml  README.md  events.json  install.sh  uninstall.sh
benches/: engine_bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/collector/: Cargo.toml
crates/collector/src/: lib.rs  shell.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/query-engine/: Cargo.toml
crates/query-engine/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tui/: Cargo.toml
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: lib.rs
integration_tests/: seed_data.sh  test_hooks.sh
src/: analytics.rs  cli.rs  config.rs  daemon.rs  lib.rs  main.rs  miner.rs  query.rs  search.rs  shell.rs  store.rs
src/cli/: args.rs  mod.rs
src/database/: mod.rs  ops.rs  persistence.rs  scoring.rs  structs.rs
src/ops/: alias_file.rs  mod.rs  suggest.rs
src/tui/: app.rs  events.rs  mod.rs  render.rs  ui.rs
src/tui/ui/: add_alias_view.rs  change_alias_view.rs  confirm_view.rs  list_aliases_view.rs  main_view.rs  mod.rs  output_view.rs  pick_suggestion_view.rs  remove_alias_view.rs  search_view.rs
