[workspace]
resolver = "2"
members = [
    "crates/collector",
    "crates/storage",
    "crates/indexer",
    "crates/workflow-engine",
    "crates/query-engine",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "almanx"
version = "1.0.0"
edition = "2021"
description = "A local-first shell intelligence engine"

[[bin]]
name = "almanx"
path = "src/main.rs"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "=4.4.18", features = ["derive"] }
ratatui     = "=0.26.3"
crossterm   = "=0.27.0"
colored     = "2.0"
dirs        = "5.0"
chrono      = { version = "0.4", features = ["serde"] }
anyhow      = "1.0"
strsim      = "0.10.0"

almanx-collector       = { path = "crates/collector" }
almanx-storage         = { path = "crates/storage" }
almanx-indexer         = { path = "crates/indexer" }
almanx-workflow-engine = { path = "crates/workflow-engine" }
almanx-query-engine    = { path = "crates/query-engine" }

[profile.release]
opt-level = 3
strip = true
lto = true
