[package]
name = "flux"
version = "0.1.0"
edition = "2021"

[lib]
name = "flux"
path = "src/lib.rs"

[[bin]]
name = "flux"
path = "src/main.rs"

[[bin]]
name = "flux-daemon"
path = "src/daemon.rs"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokio        = { version = "1", features = ["full"] }
dirs         = "5.0"
clap         = { version = "3.2", features = ["derive"] }
ratatui      = "=0.25.0"
crossterm    = "=0.27"
colored      = "2.0"
tracing      = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel  = "0.5"
anyhow       = "1.0"

[patch.crates-io]
unicode-segmentation = { path = "vendor/unicode-segmentation" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false

